--- a/.github/workflows/cpaneldeploy.yml
+++ b/.github/workflows/cpaneldeploy.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+    - name: Install Composer dependencies
+        run: composer install --no-dev --prefer-dist --optimize-autoloader
 
 
       - name: Prepare the environment file
