--- a/.github/workflows/cpaneldeploy.yml
+++ b/.github/workflows/cpaneldeploy.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2' # Match the PHP version with your host environment
+          extensions: mbstring, bcmath, intl # Add any extensions your project needs
       - name: Install Composer dependencies
         run: composer install --no-dev --prefer-dist --optimize-autoloader
 
